--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "require-dir": "^0.3.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "gulp-font2css": "^0.1.2",
+    "bower": "^1.8.0",
+    "browser-sync": "^2.18.12",
     "gulp-livereload": "^3.8.1",
     "livereload": "^0.6.2"
   },
@@ -38,8 +38,5 @@
   "bugs": {
     "url": "https://github.com/energy1/loftschool2/issues"
   },
-  "homepage": "https://github.com/energy1/loftschool2#readme",
-  "devDependencies": {
-    "bower": "^1.8.0"
-  }
+  "homepage": "https://github.com/energy1/loftschool2#readme"
 }
