--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery.nicescroll": "^3.6.8",
     "bower": "*",
     "install": "^1.0.4",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "inputmask": "^3.3.6"
   }
 }
