--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "install": "^1.0.4",
     "owl.carousel": "^2.2.1",
     "inputmask": "^3.3.6",
-    "onepage-scroll": "^1.3.1"
+    "onepage-scroll": "^1.3.1",
+    "fancybox": "^3.0.47"
   }
 }
