--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "bower": "^1.8.0",
     "browser-sync": "^2.18.12",
+    "gulp-debug": "^3.1.0",
+    "gulp-file-insert": "^1.0.3",
     "gulp-livereload": "^3.8.1",
     "livereload": "^0.6.2"
   },
