--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
     "autoprefixer": "^6.7.7",
     "del": "^2.2.1",
+    "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-file": "^0.3.0",
@@ -19,6 +19,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^1.5.4",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0"
